<resources>
    <string name="_1">1</string>
    <string name="_120_cal_wing">120 Cal/Wing</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_amp_policies">About &amp; policies</string>
    <string name="about_program">About Cash for Classrooms</string>
    <string name="access_rewards">Access Rewards</string>
    <string name="account">Account</string>
    <string name="account_info_header">Account info</string>
    <string name="aci_sdk_error">Oops, we are unable to process your payment due to technical difficulties. Please try again, choose pay in store for pickup or call the store for delivery.</string>
    <string name="add">Add</string>
    <string name="add_a_card">Add a card</string>
    <string name="add_a_gift_card">Add a Gift Card</string>
    <string name="add_an_item_fullstop">Add an item.</string>
    <string name="add_delivery_address">Add</string>
    <string name="add_different_card">Add a different card</string>
    <string name="add_favorite_store">Add favorite store</string>
    <string name="add_item">Add Items</string>
    <string name="add_tip">Add tip</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add_to_order">Add to order</string>
    <string name="added_to_order">Added to order</string>
    <string name="address_1">Address 1</string>
    <string name="address_line2_field_error">Please use letters, numbers or special characters: , . # / -</string>
    <string name="address_nick_name">Address Nickname</string>
    <string name="age_restricted_offers">Age-restricted offers</string>
    <string name="age_restricted_offers_update">Age-Restricted Offers have been updated!</string>
    <string name="age_verification_check">"Yes, I'm 21 or older"</string>
    <string name="age_verification_check_warning">You need to confirm that you are 21 or older.</string>
    <string name="age_verification_ddd_check">I am 21 years of age or older and agree to the above conditions.</string>
    <string name="age_verification_ddd_description">"Have your valid government ID to show your driver at delivery. Deliveries will not be made if you are intoxicated or do not have your ID. Casey's will not issue refunds."</string>
    <string name="age_verification_description">You must be at least 21 to purchase alcohol.</string>
    <string name="age_verification_header">Verify Your Age</string>
    <string name="age_verification_note">This will open in a browser window once you save</string>
    <string name="alcohol_offers">Alcohol Offers</string>
    <string name="all_fields_required">All fields required</string>
    <string name="allergen_information">Allergen Information</string>
    <string name="allow">Allow</string>
    <string name="already_saved_card_error_message">"We've got you taken care of, this card is already saved!"</string>
    <string name="already_saved_card_error_title">"Looks like you've already saved this card."</string>
    <string name="amex">American Express</string>
    <string name="android.credentials.TYPE_PASSWORD_CREDENTIAL">Password</string>
    <string name="androidx.credentials.TYPE_PUBLIC_KEY_CREDENTIAL">Passkey</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_moved_to_background" />
    <string name="app_name">AndroidScratchCard</string>
    <string name="app_name_long">"Casey's General Store"</string>
    <string name="app_name_short">"Casey's"</string>
    <string name="app_update_description">"We've made some important changes to the Casey's app.

Please update to continue getting great deals and the best pizza around!"</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apt_hint">Suite, Apt #</string>
    <string name="are_you_sure_remove_address">Are you sure you want to remove this address?</string>
    <string name="arrival_store_exit_message">If you exit, &lt;b>the store will not be notified&lt;/b> of your arrival.</string>
    <string name="arrival_thank_you_description">"We've let the store know you're
 here. Your order should be on its
 way out shortly."</string>
    <string name="asap">ASAP</string>
    <string name="attendant_site_description">Keep this screen open until the attendant can assist you.</string>
    <string name="attendant_site_page_title">Activate Wash With Attendant</string>
    <string name="austria">Österreich</string>
    <string name="availability_localized">Not Available For Selected Time</string>
    <string name="availability_unlocalized">Available For Select Times</string>
    <string name="available_carryout_curbside_only">Available For Curbside Pickup Only</string>
    <string name="available_carryout_only">Available For Pickup Only</string>
    <string name="available_caseys_cash_available">"  Casey’s Cash Available"</string>
    <string name="available_caseys_cash_remaining">"  Casey’s Cash Remaining"</string>
    <string name="available_delivery_curbside">Available For Delivery and Curbside Pickup Only</string>
    <string name="available_delivery_in_store">Available For Delivery and In Store Pickup Only</string>
    <string name="available_delivery_only">Available For Delivery Only</string>
    <string name="available_in_store_curbside_only">Available For In Store and Curbside Pickup Only</string>
    <string name="available_instore_only">Available In Store Only</string>
    <string name="available_instore_pickup_only">Available For In Store Pickup Only</string>
    <string name="available_points">Available Points</string>
    <string name="back_to_carwash">BACK TO CARWASH</string>
    <string name="back_to_home">Back to home</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="belgium">Belgique</string>
    <string name="billed_monthly">Billed Monthly</string>
    <string name="billed_weekly">Billed Weekly</string>
    <string name="bio_cancel">Cancel</string>
    <string name="bio_error_outline_path1">M 12 3 C 16.9705627485 3 21 7.02943725152 21 12 C 21 16.9705627485 16.9705627485 21 12 21 C 7.02943725152 21 3 16.9705627485 3 12 C 3 7.02943725152 7.02943725152 3 12 3 Z</string>
    <string name="change_email_title">Change Email</string>
    <string name="change_mobile_number_title">Change Mobile Number</string>
    <string name="check_out_as_guest">Check out as guest</string>
    <string name="checkout_consent_message">By continuing, you acknowledge that you agree to our Privacy Policy and Terms of Use, and you are at least 13 years old.</string>
    <string name="checkout_sign_up_message">"Sign up today to quickly
reorder your favorites!"</string>
    <string name="clubs_challenge_title">Clubs</string>
    <string name="continue_">Continue</string>
    <string name="create_an_account">Create an account</string>
    <string name="details">Details</string>
    <string name="email">Email</string>
    <string name="guest_checkout_info_request">Please provide the following info to check out:</string>
    <string name="i_want_to_receive_special_offers_from_caseys">"I want to receive special offers from Casey's:"</string>
    <string name="inbox_messages">Messages</string>
    <string name="log_in_create_account">Log in / Create account</string>
    <string name="member_deal">Member deals</string>
    <string name="navigation_label_about_policies">About</string>
    <string name="navigation_label_account">Account</string>
    <string name="navigation_label_add_a_card">Add a Card</string>
    <string name="navigation_label_age_restricted_offers">Age-Restricted Offers</string>
    <string name="navigation_label_change_default_card">Change Default Card</string>
    <string name="navigation_label_debug">Debug settings</string>
    <string name="navigation_label_dob_update">Change birthdate</string>
    <string name="navigation_label_favorite_store">Favorite Store</string>
    <string name="navigation_label_home">Home</string>
    <string name="navigation_label_licenses">Licenses</string>
    <string name="navigation_label_order">Order</string>
    <string name="navigation_label_rewards">Rewards</string>
    <string name="navigation_label_software_license">Software licenses</string>
    <string name="navigation_label_team_members">"Casey's Team Member"</string>
    <string name="notifications">Notifications</string>
    <string name="offer_code">Offer Code</string>
    <string name="offer_details_title">Offer details</string>
    <string name="payment_methods_title">Payment methods</string>
    <string name="personal_challenges">Personal Challenges</string>
    <string name="personal_information">Personal information</string>
    <string name="points_history">Points History</string>
    <string name="rewards_cash_details_fragment_title">"Casey's Cash Details"</string>
    <string name="rewards_details_fragment_title">Rewards Details</string>
    <string name="rewards_find_school_title">Find a School</string>
    <string name="rewards_offers_title">Offers</string>
    <string name="rewards_redeem_points_fragment_title">Redeem Points</string>
    <string name="rewards_scan_fragment_title">Scan at Register</string>
    <string name="school_selection">School Selection</string>
    <string name="sms_consent_message">"By providing my phone number and clicking the CONTINUE button, I am providing my signature that I consent to receive recurring advertising and other text messages from and on behalf of Casey's and its affiliates at the number provided. I consent that such texts may be sent via automatic telephone dialing system or other automated technology. I understand my consent is not required and is not a condition of purchasing goods or services. No purchase required. Not all carriers may be covered and message and data rates may apply. Terms and Conditions and Privacy Policy. Text STOP to 227397 to cancel, text HELP to 227397 for help."</string>
    <string name="text_message">Text Message</string>
    <string name="transactions">Transactions</string>
    <string name="verify_mobile_number_title">Verify Mobile Number</string>
</resources>