<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="@dimen/margin_standard" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/login_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_standard" android:text="@string/log_in_create_account" />
        <Button android:id="@id/licenses_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="100.0dip" android:text="@string/navigation_label_licenses" />
        <Button android:id="@id/debug_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_standard_third" android:text="@string/navigation_label_debug" />
    </LinearLayout>
</ScrollView>
